refactor: extract method and move class to top level